add with pyflink related code

--- a/PycharmProjects/citi_work/daily_learning/flink_learning/pyflink_table.ipynb
+++ b/PycharmProjects/citi_work/daily_learning/flink_learning/pyflink_table.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fb7b22b6",
+   "id": "ebcdbe81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "afb1e6b5",
+   "id": "8cfd5e88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d8e009a5",
+   "id": "4bb7d902",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9a67cea7",
+   "id": "948dccc3",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1f95c0c0",
+   "id": "e4c548a6",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b6e526ad",
+   "id": "4d54a341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9e1ff231",
+   "id": "072d5de5",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1cfb0d3c",
+   "id": "274ebf56",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "3b027adb",
+   "id": "2a10d603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f7e7d973",
+   "id": "9d253923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7f8b1484",
+   "id": "cbbf80d4",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3b0b8378",
+   "id": "c945e461",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5e91749c",
+   "id": "52f94855",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9fe4cb14",
+   "id": "1f08c634",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8e1856be",
+   "id": "979cf3b9",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e58d30c4",
+   "id": "67f68e36",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "dbf7b572",
+   "id": "a2b73a8f",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "23ff79fe",
+   "id": "4de1649c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "2065112e",
+   "id": "2dc1c9a5",
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e0652d40",
+   "id": "d69adf29",
    "metadata": {},
    "outputs": [
     {
@@ -587,8 +587,345 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "d6c99a96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyflink.table.table.Table"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2ff0beec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattr__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_j_table', '_t_env', 'add_columns', 'add_or_replace_columns', 'aggregate', 'alias', 'distinct', 'drop_columns', 'execute', 'execute_insert', 'explain', 'fetch', 'filter', 'flat_aggregate', 'flat_map', 'full_outer_join', 'get_schema', 'group_by', 'intersect', 'intersect_all', 'join', 'join_lateral', 'left_outer_join', 'left_outer_join_lateral', 'limit', 'map', 'minus', 'minus_all', 'offset', 'order_by', 'over_window', 'print_schema', 'rename_columns', 'right_outer_join', 'select', 'to_pandas', 'union', 'union_all', 'where', 'window']\n"
+     ]
+    }
+   ],
+   "source": [
+    "dis(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "37f27154",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyflink.table.table.Table"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = env.from_elements([['a', 'b']], ['c1', 'c2'])\n",
+    "type(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "9b08516c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.create_temporary_view('tmp', d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "74080096",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+--------------------------------+--------------------------------+\n",
+      "| op |                             c1 |                             c2 |\n",
+      "+----+--------------------------------+--------------------------------+\n",
+      "| +I |                              a |                              b |\n",
+      "+----+--------------------------------+--------------------------------+\n",
+      "1 row in set\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.from_path('tmp').execute().print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "36963f0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders = table_env.from_elements([('Jack', 'FRANCE', 10), ('Rose', 'ENGLAND', 30), ('Jack', 'FRANCE', 20)],\n",
+    "                                 ['name', 'country', 'revenue'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "d9c87788",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+--------------------------------+----------------------+\n",
+      "| op |                           name |                  res |\n",
+      "+----+--------------------------------+----------------------+\n",
+      "| +I |                           Rose |                   30 |\n",
+      "| +I |                           Jack |                   10 |\n",
+      "| -U |                           Jack |                   10 |\n",
+      "| +U |                           Jack |                   30 |\n",
+      "+----+--------------------------------+----------------------+\n",
+      "4 rows in set\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyflink.table.expressions import call\n",
+    "\n",
+    "new_order = orders.select(col('name'), col('revenue')).group_by(col('name')).select(col('name'), call('sum', col('revenue')).alias('res'))\n",
+    "new_order.execute().print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "4fa5d56c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+--------------------------------+--------------------------------+\n",
+      "| op |                             c1 |                             c2 |\n",
+      "+----+--------------------------------+--------------------------------+\n",
+      "| +I |                              a |                              b |\n",
+      "+----+--------------------------------+--------------------------------+\n",
+      "1 row in set\n"
+     ]
+    }
+   ],
+   "source": [
+    "env.execute_sql('select * from tmp').print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "707a856e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Row('a', 'b')>\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = env.execute_sql('select * from tmp')\n",
+    "for r in res.collect():\n",
+    "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f7ffa7e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>country</th>\n",
+       "      <th>revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Jack</td>\n",
+       "      <td>FRANCE</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rose</td>\n",
+       "      <td>ENGLAND</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jack</td>\n",
+       "      <td>FRANCE</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   name  country  revenue\n",
+       "0  Jack   FRANCE       10\n",
+       "1  Rose  ENGLAND       30\n",
+       "2  Jack   FRANCE       20"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "11afe2b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pyflink.table.table.Table"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "c4cbe05e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== Abstract Syntax Tree ==\n",
+      "LogicalProject(name=[$0], res=[$1])\n",
+      "+- LogicalAggregate(group=[{0}], EXPR$0=[SUM($1)])\n",
+      "   +- LogicalProject(name=[$0], revenue=[$2])\n",
+      "      +- LogicalTableScan(table=[[*anonymous_python-input-format$10*]])\n",
+      "\n",
+      "== Optimized Physical Plan ==\n",
+      "GroupAggregate(groupBy=[name], select=[name, SUM(revenue) AS EXPR$0])\n",
+      "+- Exchange(distribution=[hash[name]])\n",
+      "   +- Calc(select=[name, revenue])\n",
+      "      +- TableSourceScan(table=[[*anonymous_python-input-format$10*]], fields=[name, country, revenue])\n",
+      "\n",
+      "== Optimized Execution Plan ==\n",
+      "GroupAggregate(groupBy=[name], select=[name, SUM(revenue) AS EXPR$0])\n",
+      "+- Exchange(distribution=[hash[name]])\n",
+      "   +- Calc(select=[name, revenue])\n",
+      "      +- TableSourceScan(table=[[*anonymous_python-input-format$10*]], fields=[name, country, revenue])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_order.explain())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "08f008c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "== Abstract Syntax Tree ==\n",
+      "LogicalSink(table=[default_catalog.default_database.print], fields=[id, data])\n",
+      "+- LogicalTableScan(table=[[default_catalog, default_database, datagen]])\n",
+      "\n",
+      "== Optimized Physical Plan ==\n",
+      "Sink(table=[default_catalog.default_database.print], fields=[id, data])\n",
+      "+- TableSourceScan(table=[[default_catalog, default_database, datagen]], fields=[id, data])\n",
+      "\n",
+      "== Optimized Execution Plan ==\n",
+      "Sink(table=[default_catalog.default_database.print], fields=[id, data])\n",
+      "+- TableSourceScan(table=[[default_catalog, default_database, datagen]], fields=[id, data])\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "stat = env.create_statement_set()\n",
+    "\n",
+    "stat.add_insert('print', s)\n",
+    "\n",
+    "print(stat.explain())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2b62a0f2",
+   "id": "6a06e27d",
    "metadata": {},
    "outputs": [],
    "source": []
